// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`doIUseEmail() works > fails with unsupported class selectors 1`] = `
{
  "errors": [
    "\`Class selector\` is not supported by \`gmail.mobile-webmail\`",
  ],
  "notes": [],
  "success": false,
  "warnings": [],
}
`;

exports[`doIUseEmail() works > getSupportedFeatures() 1`] = `
[
  {
    "link": "",
    "name": "background-color",
    "notes": [
      "Note about \`background-color\` support for \`orange.desktop-webmail\`: Buggy. Only supports [color keywords from CSS Level 1](https://developer.mozilla.org/en-US/docs/Web/CSS/color_value#color_keywords).",
      "Note about \`background-color\` support for \`orange.ios\`: Buggy. Only supports [color keywords from CSS Level 1](https://developer.mozilla.org/en-US/docs/Web/CSS/color_value#color_keywords).",
      "Note about \`background-color\` support for \`orange.android\`: Buggy. Only supports [color keywords from CSS Level 1](https://developer.mozilla.org/en-US/docs/Web/CSS/color_value#color_keywords).",
    ],
  },
  {
    "link": "",
    "name": "background",
    "notes": [
      "Note about \`background\` support for \`orange.desktop-webmail\`: Partial. Does not support the \`/ value\` shorthand for \`background-size\`.",
      "Note about \`background\` support for \`orange.ios\`: Partial. Does not support the \`/ value\` shorthand for \`background-size\`.",
      "Note about \`background\` support for \`orange.android\`: Partial. Does not support the \`/ value\` shorthand for \`background-size\`.",
      "Note about \`background\` support for \`outlook.windows\`: Partial. Only \`background-color\` values are supported.",
      "Note about \`background\` support for \`outlook.windows-mail\`: Partial. Only \`background-color\` values are supported.",
      "Note about \`background\` support for \`yahoo.desktop-webmail\`: Partial. Does not support multiple values. The comma between two values is removed.",
      "Note about \`background\` support for \`yahoo.desktop-webmail\`: Partial. Does not support the \`/ value\` shorthand for \`background-size\`. But it can be used in the \`background-size\` property instead.",
      "Note about \`background\` support for \`yahoo.ios\`: Partial. Does not support multiple values. The comma between two values is removed.",
      "Note about \`background\` support for \`yahoo.ios\`: Partial. Does not support the \`/ value\` shorthand for \`background-size\`. But it can be used in the \`background-size\` property instead.",
      "Note about \`background\` support for \`yahoo.android\`: Partial. Does not support multiple values. The comma between two values is removed.",
      "Note about \`background\` support for \`yahoo.android\`: Partial. Does not support the \`/ value\` shorthand for \`background-size\`. But it can be used in the \`background-size\` property instead.",
      "Note about \`background\` support for \`aol.desktop-webmail\`: Partial. Does not support multiple values. The comma between two values is removed.",
      "Note about \`background\` support for \`aol.desktop-webmail\`: Partial. Does not support the \`/ value\` shorthand for \`background-size\`. But it can be used in the \`background-size\` property instead.",
      "Note about \`background\` support for \`aol.ios\`: Partial. Does not support multiple values. The comma between two values is removed.",
      "Note about \`background\` support for \`aol.ios\`: Partial. Does not support the \`/ value\` shorthand for \`background-size\`. But it can be used in the \`background-size\` property instead.",
      "Note about \`background\` support for \`aol.android\`: Partial. Does not support multiple values. The comma between two values is removed.",
      "Note about \`background\` support for \`aol.android\`: Partial. Does not support the \`/ value\` shorthand for \`background-size\`. But it can be used in the \`background-size\` property instead.",
    ],
  },
  {
    "link": "",
    "name": "border-collapse",
    "notes": [],
  },
  {
    "link": "",
    "name": "border",
    "notes": [
      "Note about \`border\` support for \`outlook.windows\`: Partial. A border can not be bigger than 8px.",
      "Note about \`border\` support for \`outlook.windows\`: Buggy. Unreliable if used on a \`<p>\` or a \`<div>\`.",
      "Note about \`border\` support for \`outlook.windows-mail\`: Partial. A border can not be bigger than 8px.",
      "Note about \`border\` support for \`outlook.windows-mail\`: Buggy. Unreliable if used on a \`<p>\` or a \`<div>\`.",
    ],
  },
  {
    "link": "",
    "name": "direction",
    "notes": [
      "Note about \`direction\` support for \`gmail.mobile-webmail\`: Buggy. The client applies an \`rtl\` direction to the entire email if it contains text in a \`rtl\` language.",
    ],
  },
  {
    "link": "",
    "name": "display",
    "notes": [
      "Note about \`display\` support for \`gmail.ios\`: Partial. \`flex\`, \`grid\`, \`flow-root\`, \`contents\`, \`inline flow-root\`, \`inline flex\`, \`inline grid\`, \`initial\`, \`revert\`, \`unset\` are not supported with non Google accounts.",
      "Note about \`display\` support for \`gmail.android\`: Partial. \`flex\`, \`grid\`, \`flow-root\`, \`contents\`, \`inline flow-root\`, \`inline flex\`, \`inline grid\`, \`initial\`, \`revert\`, \`unset\` are not supported with non Google accounts.",
      "Note about \`display\` support for \`orange.desktop-webmail\`: Partial. \`inline-flex\`, \`inline-grid\`, \`flex\`, \`grid\`, \`flow-root\`, \`contents\`, \`inline flow-root\`, \`inline flex\`, \`inline grid\`, \`initial\`, \`revert\`, \`unset\` values are not supported.",
      "Note about \`display\` support for \`orange.desktop-webmail\`: Buggy. Only the first value is kept with the two-value syntax.",
      "Note about \`display\` support for \`orange.ios\`: Partial. \`inline-flex\`, \`inline-grid\`, \`flex\`, \`grid\`, \`flow-root\`, \`contents\`, \`inline flow-root\`, \`inline flex\`, \`inline grid\`, \`initial\`, \`revert\`, \`unset\` values are not supported.",
      "Note about \`display\` support for \`orange.android\`: Partial. \`inline-flex\`, \`inline-grid\`, \`flex\`, \`grid\`, \`flow-root\`, \`contents\`, \`inline flow-root\`, \`inline flex\`, \`inline grid\`, \`initial\`, \`revert\`, \`unset\` values are not supported.",
      "Note about \`display\` support for \`outlook.windows\`: Buggy. \`display:none\` does not inherit to inner tables.",
      "Note about \`display\` support for \`outlook.windows\`: Partial. Only supports \`display:none\` (but not on \`<img>\`).",
      "Note about \`display\` support for \`outlook.windows-mail\`: Buggy. \`display:none\` does not inherit to inner tables.",
      "Note about \`display\` support for \`outlook.windows-mail\`: Partial. Only supports \`display:none\` (but not on \`<img>\`).",
      "Note about \`display\` support for \`yahoo.desktop-webmail\`: Partial. \`flow-root\`, \`inline-flex\`, \`inline-grid\`, \`inline flow\`, \`contents\`, \`revert\` are not supported.",
      "Note about \`display\` support for \`yahoo.ios\`: Partial. \`flow-root\`, \`inline-flex\`, \`inline-grid\`, \`inline flow\`, \`contents\`, \`revert\` are not supported.",
      "Note about \`display\` support for \`yahoo.android\`: Partial. \`flow-root\`, \`inline-flex\`, \`inline-grid\`, \`inline flow\`, \`contents\`, \`revert\` are not supported.",
      "Note about \`display\` support for \`aol.desktop-webmail\`: Partial. \`flow-root\`, \`inline-flex\`, \`inline-grid\`, \`inline flow\`, \`contents\`, \`revert\` are not supported.",
      "Note about \`display\` support for \`aol.ios\`: Partial. \`flow-root\`, \`inline-flex\`, \`inline-grid\`, \`inline flow\`, \`contents\`, \`revert\` are not supported.",
      "Note about \`display\` support for \`aol.android\`: Partial. \`flow-root\`, \`inline-flex\`, \`inline-grid\`, \`inline flow\`, \`contents\`, \`revert\` are not supported.",
      "Note about \`display\` support for \`fastmail.desktop-webmail\`: Partial. Two-value syntax are combined into a single one with a dash.",
    ],
  },
  {
    "link": "",
    "name": "font-size",
    "notes": [
      "Note about \`font-size\` support for \`outlook.windows\`: Partial support. \`rem\` values are not supported.",
      "Note about \`font-size\` support for \`outlook.windows-mail\`: Partial support. \`relative\` and \`percentage\` size values not supported.",
      "Note about \`font-size\` support for \`yahoo.desktop-webmail\`: Partial support. \`rem\` values are not supported.",
      "Note about \`font-size\` support for \`yahoo.ios\`: Partial support. \`rem\` values are not supported.",
      "Note about \`font-size\` support for \`yahoo.android\`: Partial support. \`rem\` values are not supported.",
      "Note about \`font-size\` support for \`aol.desktop-webmail\`: Partial support. \`rem\` values are not supported.",
      "Note about \`font-size\` support for \`aol.ios\`: Partial support. \`rem\` values are not supported.",
      "Note about \`font-size\` support for \`aol.android\`: Partial support. \`rem\` values are not supported.",
      "Note about \`font-size\` support for \`samsung-email.android\`: Partial support. \`relative\` and \`percentage\` size values not supported.",
    ],
  },
  {
    "link": "",
    "name": "font-weight",
    "notes": [
      "Note about \`font-weight\` support for \`orange.desktop-webmail\`: Partial support. \`<number>\` values are not supported as per CSS Fonts Level 4 where any \`<number>\` value between 1 and 1000 (inclusive) is a valid value. Only the following numeric values are supported: 100, 200, 300, 400, 500, 600, 700, 800, and 900.",
      "Note about \`font-weight\` support for \`outlook.windows\`: Partial support. \`<number>\` values between 0 and 599 are set as normal font weight. \`<number>\` values between 600 and 1000 are set as bold font weight.",
      "Note about \`font-weight\` support for \`outlook.windows-mail\`: Partial support. \`<number>\` values between 0 and 599 are set as normal font weight. \`<number>\` values between 600 and 1000 are set as bold font weight.",
      "Note about \`font-weight\` support for \`yahoo.desktop-webmail\`: Partial support. \`<number>\` values are not supported as per CSS Fonts Level 4 where any \`<number>\` value between 1 and 1000 (inclusive) is a valid value. Only the following numeric values are supported: 100, 200, 300, 400, 500, 600, 700, 800, and 900.",
      "Note about \`font-weight\` support for \`yahoo.ios\`: Partial support. \`<number>\` values are not supported as per CSS Fonts Level 4 where any \`<number>\` value between 1 and 1000 (inclusive) is a valid value. Only the following numeric values are supported: 100, 200, 300, 400, 500, 600, 700, 800, and 900.",
      "Note about \`font-weight\` support for \`yahoo.android\`: Partial support. \`<number>\` values are not supported as per CSS Fonts Level 4 where any \`<number>\` value between 1 and 1000 (inclusive) is a valid value. Only the following numeric values are supported: 100, 200, 300, 400, 500, 600, 700, 800, and 900.",
      "Note about \`font-weight\` support for \`aol.desktop-webmail\`: Partial support. \`<number>\` values are not supported as per CSS Fonts Level 4 where any \`<number>\` value between 1 and 1000 (inclusive) is a valid value. Only the following numeric values are supported: 100, 200, 300, 400, 500, 600, 700, 800, and 900.",
      "Note about \`font-weight\` support for \`aol.ios\`: Partial support. \`<number>\` values are not supported as per CSS Fonts Level 4 where any \`<number>\` value between 1 and 1000 (inclusive) is a valid value. Only the following numeric values are supported: 100, 200, 300, 400, 500, 600, 700, 800, and 900.",
      "Note about \`font-weight\` support for \`aol.android\`: Partial support. \`<number>\` values are not supported as per CSS Fonts Level 4 where any \`<number>\` value between 1 and 1000 (inclusive) is a valid value. Only the following numeric values are supported: 100, 200, 300, 400, 500, 600, 700, 800, and 900.",
    ],
  },
  {
    "link": "",
    "name": "font shorthand",
  },
  {
    "link": "",
    "name": "letter-spacing",
    "notes": [
      "Note about \`letter-spacing\` support for \`outlook.windows\`: Partial. Big negative values are rendered differently from CSS standards.",
      "Note about \`letter-spacing\` support for \`outlook.windows\`: Buggy. Values set in \`em\` are smaller than the expected render in CSS. See [#192](https://github.com/hteumeuleu/caniemail/issues/192).",
      "Note about \`letter-spacing\` support for \`outlook.windows-mail\`: Partial. Big negative values are rendered differently from CSS standards.",
    ],
  },
  {
    "link": "",
    "name": "line-height",
    "notes": [
      "Note about \`line-height\` support for \`orange.ios\`: Partial. \`normal\` value is not supported.",
      "Note about \`line-height\` support for \`orange.android\`: Partial. \`normal\` value is not supported.",
      "Note about \`line-height\` support for \`outlook.windows\`: Buggy. \`em\` and \`px\` units behave weirdly. Use \`mso-line-height-rule:exactly\`.",
      "Note about \`line-height\` support for \`outlook.windows-mail\`: Buggy. \`em\` and \`px\` units behave weirdly. Use \`mso-line-height-rule:exactly\`.",
    ],
  },
  {
    "link": "",
    "name": "list-style-type",
  },
  {
    "link": "",
    "name": "margin",
    "notes": [
      "Note about \`margin\` support for \`gmail.desktop-webmail\`: Partial. Negative values are not supported.",
      "Note about \`margin\` support for \`gmail.ios\`: Partial. Negative values are not supported.",
      "Note about \`margin\` support for \`gmail.android\`: Partial. Negative values are not supported.",
      "Note about \`margin\` support for \`gmail.mobile-webmail\`: Partial. Negative values are not supported.",
      "Note about \`margin\` support for \`outlook.windows\`: Partial. Negative values are not supported.",
      "Note about \`margin\` support for \`outlook.windows\`: Partial. Not supported on \`<span>\` and \`<body>\` elements.",
      "Note about \`margin\` support for \`outlook.windows\`: Buggy. \`background-color\` is included inside the \`margin\`.",
      "Note about \`margin\` support for \`outlook.windows\`: Partial. \`auto\` value is not supported.",
      "Note about \`margin\` support for \`outlook.windows-mail\`: Partial. Negative values are not supported.",
      "Note about \`margin\` support for \`outlook.windows-mail\`: Partial. Not supported on \`<span>\` and \`<body>\` elements.",
      "Note about \`margin\` support for \`outlook.windows-mail\`: Buggy. \`background-color\` is included inside the \`margin\`.",
      "Note about \`margin\` support for \`outlook.ios\`: Partial. Negative values are not supported.",
      "Note about \`margin\` support for \`outlook.android\`: Partial. Negative values are not supported.",
      "Note about \`margin\` support for \`yahoo.desktop-webmail\`: Partial. Negative values are not supported.",
      "Note about \`margin\` support for \`yahoo.ios\`: Partial. Negative values are not supported.",
      "Note about \`margin\` support for \`yahoo.android\`: Partial. Negative values are not supported.",
      "Note about \`margin\` support for \`aol.desktop-webmail\`: Partial. Negative values are not supported.",
      "Note about \`margin\` support for \`aol.ios\`: Partial. Negative values are not supported.",
      "Note about \`margin\` support for \`aol.android\`: Partial. Negative values are not supported.",
      "Note about \`margin\` support for \`mail-ru.desktop-webmail\`: Partial. Negative values are not supported.",
    ],
  },
  {
    "link": "",
    "name": "max-width",
    "notes": [
      "Note about \`max-width\` support for \`apple-mail.ios\`: Partial. Doesn't work on \`<table>\` elements, as per [CSS 2.1 specification](https://www.w3.org/TR/CSS2/visudet.html#min-max-widths).",
      "Note about \`max-width\` support for \`outlook.windows\`: Partial. Only works on \`<table>\` elements.",
      "Note about \`max-width\` support for \`outlook.windows-mail\`: Partial. Only works on \`<table>\` elements.",
      "Note about \`max-width\` support for \`yahoo.ios\`: Partial. Doesn't work on \`<table>\` elements, as per [CSS 2.1 specification](https://www.w3.org/TR/CSS2/visudet.html#min-max-widths).",
      "Note about \`max-width\` support for \`aol.ios\`: Partial. Doesn't work on \`<table>\` elements, as per [CSS 2.1 specification](https://www.w3.org/TR/CSS2/visudet.html#min-max-widths).",
      "Note about \`max-width\` support for \`protonmail.ios\`: Partial. Doesn't work on \`<table>\` elements, as per [CSS 2.1 specification](https://www.w3.org/TR/CSS2/visudet.html#min-max-widths).",
    ],
  },
  {
    "link": "",
    "name": "padding",
    "notes": [
      "Note about \`padding\` support for \`outlook.windows\`: Partial. Only supported on table cells.",
      "Note about \`padding\` support for \`outlook.windows\`: Buggy. Vertical padding will be the same for all cells of a same row, adopting the biggest value.",
      "Note about \`padding\` support for \`outlook.windows-mail\`: Partial. Only supported on table cells.",
      "Note about \`padding\` support for \`outlook.windows-mail\`: Buggy. Vertical padding will be the same for all cells of a same row, adopting the biggest value.",
    ],
  },
  {
    "link": "",
    "name": "rgb()",
    "notes": [
      "Note about \`rgb()\` support for \`gmail.desktop-webmail\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`gmail.desktop-webmail\`: whitespace syntax (\`rgb(0 128 0)\`): when used in the \`style\` attribute of an element, the whole attribute is stripped. When used inside \`<style>\`, the whole \`<style>\` block is stripped.",
      "Note about \`rgb()\` support for \`gmail.ios\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`gmail.ios\`: whitespace syntax (\`rgb(0 128 0)\`): when used in the \`style\` attribute of an element, the whole attribute is stripped. When used inside \`<style>\`, the whole \`<style>\` block is stripped.",
      "Note about \`rgb()\` support for \`gmail.android\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`gmail.android\`: whitespace syntax (\`rgb(0 128 0)\`): when used in the \`style\` attribute of an element, the whole attribute is stripped. When used inside \`<style>\`, the whole \`<style>\` block is stripped.",
      "Note about \`rgb()\` support for \`gmail.mobile-webmail\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`gmail.mobile-webmail\`: whitespace syntax (\`rgb(0 128 0)\`): when used in the \`style\` attribute of an element, the whole attribute is stripped. When used inside \`<style>\`, the whole \`<style>\` block is stripped.",
      "Note about \`rgb()\` support for \`orange.desktop-webmail\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`orange.desktop-webmail\`: Alpha value is not supported (\`rgb(0, 128, 0, 0.5)\`).",
      "Note about \`rgb()\` support for \`orange.ios\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`orange.ios\`: Alpha value is not supported (\`rgb(0, 128, 0, 0.5)\`).",
      "Note about \`rgb()\` support for \`orange.android\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`orange.android\`: Alpha value is not supported (\`rgb(0, 128, 0, 0.5)\`).",
      "Note about \`rgb()\` support for \`outlook.windows\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`outlook.windows\`: Alpha value is not supported (\`rgb(0, 128, 0, 0.5)\`).",
      "Note about \`rgb()\` support for \`outlook.windows-mail\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`outlook.windows-mail\`: Alpha value is not supported (\`rgb(0, 128, 0, 0.5)\`).",
      "Note about \`rgb()\` support for \`yahoo.desktop-webmail\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`yahoo.ios\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`yahoo.android\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`aol.desktop-webmail\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`aol.ios\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`aol.android\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
    ],
  },
  {
    "link": "",
    "name": "text-align",
    "notes": [
      "Note about \`text-align\` support for \`gmail.ios\`: Partial. Flow-relative values \`start\` and \`end\` are not supported with non Gmail account.",
      "Note about \`text-align\` support for \`gmail.android\`: Partial. Flow-relative values \`start\` and \`end\` are not supported with non Gmail account.",
      "Note about \`text-align\` support for \`orange.desktop-webmail\`: Partial. Flow-relative values \`start\` and \`end\` are not supported.",
      "Note about \`text-align\` support for \`orange.ios\`: Partial. Flow-relative values \`start\` and \`end\` are not supported.",
      "Note about \`text-align\` support for \`orange.android\`: Partial. Flow-relative values \`start\` and \`end\` are not supported.",
      "Note about \`text-align\` support for \`outlook.windows\`: Partial. Flow-relative values \`start\` and \`end\` are not supported.",
      "Note about \`text-align\` support for \`outlook.windows-mail\`: Partial. Flow-relative values \`start\` and \`end\` are not supported.",
      "Note about \`text-align\` support for \`yahoo.desktop-webmail\`: Partial. Flow-relative values \`start\` and \`end\` are not supported.",
      "Note about \`text-align\` support for \`yahoo.ios\`: Partial. Flow-relative values \`start\` and \`end\` are not supported.",
      "Note about \`text-align\` support for \`yahoo.android\`: Partial. Flow-relative values \`start\` and \`end\` are not supported.",
      "Note about \`text-align\` support for \`aol.desktop-webmail\`: Partial. Flow-relative values \`start\` and \`end\` are not supported.",
      "Note about \`text-align\` support for \`aol.ios\`: Partial. Flow-relative values \`start\` and \`end\` are not supported.",
      "Note about \`text-align\` support for \`aol.android\`: Partial. Flow-relative values \`start\` and \`end\` are not supported.",
    ],
  },
  {
    "link": "",
    "name": "text-indent",
    "notes": [
      "Note about \`text-indent\` support for \`gmail.desktop-webmail\`: Partial. Negative values are not supported.",
      "Note about \`text-indent\` support for \`gmail.ios\`: Partial. Negative values are not supported.",
      "Note about \`text-indent\` support for \`gmail.android\`: Partial. Negative values are not supported.",
      "Note about \`text-indent\` support for \`gmail.mobile-webmail\`: Partial. Negative values are not supported.",
      "Note about \`text-indent\` support for \`yahoo.desktop-webmail\`: Partial. Negative values are not supported.",
      "Note about \`text-indent\` support for \`yahoo.ios\`: Partial. Negative values are not supported.",
      "Note about \`text-indent\` support for \`yahoo.android\`: Partial. Negative values are not supported.",
      "Note about \`text-indent\` support for \`aol.desktop-webmail\`: Partial. Negative values are not supported.",
      "Note about \`text-indent\` support for \`aol.ios\`: Partial. Negative values are not supported.",
      "Note about \`text-indent\` support for \`aol.android\`: Partial. Negative values are not supported.",
      "Note about \`text-indent\` support for \`mail-ru.desktop-webmail\`: Partial. Hard-coded negative values are not supported, but negative values as a result of the \`calc()\` function are supported.",
    ],
  },
  {
    "link": "",
    "name": "text-transform",
    "notes": [
      "Note about \`text-transform\` support for \`outlook.windows\`: Partial. \`lowercase\` value is not supported.",
      "Note about \`text-transform\` support for \`outlook.windows-mail\`: Partial. \`lowercase\` value is not supported.",
    ],
  },
  {
    "link": "",
    "name": "cm unit",
  },
  {
    "link": "",
    "name": "em unit",
  },
  {
    "link": "",
    "name": "ex unit",
  },
  {
    "link": "",
    "name": "in unit",
  },
  {
    "link": "",
    "name": "mm unit",
  },
  {
    "link": "",
    "name": "pc unit",
  },
  {
    "link": "",
    "name": "% unit",
  },
  {
    "link": "",
    "name": "pt unit",
  },
  {
    "link": "",
    "name": "px unit",
  },
  {
    "link": "",
    "name": "vertical-align",
  },
  {
    "link": "",
    "name": "width property",
    "notes": [
      "Note about \`width property\` support for \`outlook.windows\`: Partial. Not supported on \`<body>\`, \`<span>\`, \`<div>\`, \`<p>\` or \`<img>\` elements.",
      "Note about \`width property\` support for \`laposte.desktop-webmail\`: Buggy. The webmail has a generic style that sets \`table { width:inherit; }\`.",
    ],
  },
  {
    "link": "",
    "name": "align attribute",
    "notes": [
      "Note about \`align attribute\` support for \`outlook.macos\`: Partial. \`left\` and \`right\` do not work on \`<table>\` elements. Use \`float:left\` or \`float:right\` styles instead.",
      "Note about \`align attribute\` support for \`protonmail.desktop-webmail\`: Partial. \`<img>\` elements are wrapped in a \`<span>\` so \`left\` and \`right\` values have no effect.",
      "Note about \`align attribute\` support for \`hey.desktop-webmail\`: Partial. Not supported on \`<img>\` elements.",
    ],
  },
  {
    "link": "",
    "name": "<blockquote> element",
    "notes": [
      "Note about \`<blockquote> element\` support for \`hey.desktop-webmail\`: Buggy. Blockquote elements are nested in a \`<details>\` element.",
    ],
  },
  {
    "link": "",
    "name": "cellpadding attribute",
    "notes": [],
  },
  {
    "link": "",
    "name": "cellspacing attribute",
    "notes": [],
  },
  {
    "link": "",
    "name": "HTML comments",
    "notes": [],
  },
  {
    "link": "",
    "name": "<del> element",
  },
  {
    "link": "",
    "name": "dir attribute",
    "notes": [
      "Note about \`dir attribute\` support for \`gmail.mobile-webmail\`: Buggy. The client applies an \`rtl\` direction to the entire email if it contains text in a \`rtl\` language.",
      "Note about \`dir attribute\` support for \`orange.desktop-webmail\`: Partial. Removed from \`<table>\` and \`<td>\` elements.",
      "Note about \`dir attribute\` support for \`orange.ios\`: Partial. Removed from \`<table>\` and \`<td>\` elements.",
      "Note about \`dir attribute\` support for \`orange.android\`: Partial. Removed from \`<table>\` and \`<td>\` elements.",
      "Note about \`dir attribute\` support for \`outlook.windows\`: Buggy on anchor \`<a>\` tags.",
      "Note about \`dir attribute\` support for \`outlook.windows-mail\`: Buggy on anchor \`<a>\` tags.",
    ],
  },
  {
    "link": "",
    "name": "<div> element",
  },
  {
    "link": "",
    "name": "<h1> to <h6> elements",
  },
  {
    "link": "",
    "name": "<hr> element",
    "notes": [],
  },
  {
    "link": "",
    "name": "<img> element",
    "notes": [],
  },
  {
    "link": "",
    "name": "<ul>, <ol> and <dl>",
    "notes": [
      "Note about \`<ul>, <ol> and <dl>\` support for \`gmail.desktop-webmail\`: Partial. The \`reversed\` attribute on \`<ol>\` is not supported.",
      "Note about \`<ul>, <ol> and <dl>\` support for \`gmail.ios\`: Partial. The \`reversed\` attribute on \`<ol>\` is not supported.",
      "Note about \`<ul>, <ol> and <dl>\` support for \`gmail.android\`: Partial. The \`reversed\` attribute on \`<ol>\` is not supported.",
      "Note about \`<ul>, <ol> and <dl>\` support for \`gmail.mobile-webmail\`: Partial. The \`reversed\` attribute on \`<ol>\` is not supported.",
      "Note about \`<ul>, <ol> and <dl>\` support for \`outlook.windows\`: Partial. The \`reversed\` attribute on \`<ol>\` is not supported.",
      "Note about \`<ul>, <ol> and <dl>\` support for \`outlook.windows\`: Partial. Setting the \`value\` attribute to an \`<li>\` within an \`<ol>\` results in a different behaviour in comparison to browsers. The \`<ol>\` tag is closed before the \`<li value="">\`. A new \`<ol>\` is added with the \`start\` attribute on it set to the value of the \`value\` attribute of the \`<li>\`.",
      "Note about \`<ul>, <ol> and <dl>\` support for \`outlook.windows-mail\`: Partial. The \`reversed\` attribute on \`<ol>\` is not supported.",
      "Note about \`<ul>, <ol> and <dl>\` support for \`outlook.windows-mail\`: Partial. Setting the \`value\` attribute to an \`<li>\` within an \`<ol>\` results in a different behaviour in comparison to browsers. The \`<ol>\` tag is closed before the \`<li value="">\`. A new \`<ol>\` is added with the \`start\` attribute on it set to the value of the \`value\` attribute of the \`<li>\`.",
      "Note about \`<ul>, <ol> and <dl>\` support for \`outlook.macos\`: Partial. The \`reversed\` attribute on \`<ol>\` is not supported.",
      "Note about \`<ul>, <ol> and <dl>\` support for \`outlook.ios\`: Partial. The \`reversed\` attribute on \`<ol>\` is not supported.",
      "Note about \`<ul>, <ol> and <dl>\` support for \`outlook.android\`: Partial. The \`reversed\` attribute on \`<ol>\` is not supported.",
      "Note about \`<ul>, <ol> and <dl>\` support for \`yahoo.desktop-webmail\`: Partial. The \`reversed\` attribute on \`<ol>\` is not supported.",
      "Note about \`<ul>, <ol> and <dl>\` support for \`yahoo.ios\`: Partial. The \`reversed\` attribute on \`<ol>\` is not supported.",
      "Note about \`<ul>, <ol> and <dl>\` support for \`yahoo.android\`: Partial. The \`reversed\` attribute on \`<ol>\` is not supported.",
      "Note about \`<ul>, <ol> and <dl>\` support for \`aol.desktop-webmail\`: Partial. The \`reversed\` attribute on \`<ol>\` is not supported.",
      "Note about \`<ul>, <ol> and <dl>\` support for \`aol.ios\`: Partial. The \`reversed\` attribute on \`<ol>\` is not supported.",
      "Note about \`<ul>, <ol> and <dl>\` support for \`aol.android\`: Partial. The \`reversed\` attribute on \`<ol>\` is not supported.",
      "Note about \`<ul>, <ol> and <dl>\` support for \`mail-ru.desktop-webmail\`: Partial. The \`reversed\` attribute on \`<ol>\` is not supported.",
    ],
  },
  {
    "link": "",
    "name": "<p> element",
  },
  {
    "link": "",
    "name": "<pre> element",
  },
  {
    "link": "",
    "name": "<span> element",
  },
  {
    "link": "",
    "name": "<strong> element",
  },
  {
    "link": "",
    "name": "<table> element",
  },
  {
    "link": "",
    "name": "valign attribute",
  },
  {
    "link": "",
    "name": "BMP image format",
    "notes": [
      "Note about \`BMP image format\` support for \`gmail.desktop-webmail\`: Buggy. An image renders but the colours are incorrect.",
      "Note about \`BMP image format\` support for \`gmail.android\`: Buggy. An image renders but the colours are incorrect.",
      "Note about \`BMP image format\` support for \`gmail.mobile-webmail\`: Buggy. An image renders but the colours are incorrect.",
    ],
  },
  {
    "link": "",
    "name": "GIF image format",
    "notes": [
      "Note about \`GIF image format\` support for \`outlook.windows\`: Partial: Does not support animated gif images.",
      "Note about \`GIF image format\` support for \`outlook.windows\`: Partial: With an Office 365 account, it plays the animation 3 times then stops and shows a play button to reactivate the animation.",
    ],
  },
  {
    "link": "",
    "name": "JPG image format",
  },
  {
    "link": "",
    "name": "PNG image format",
  },
]
`;

exports[`doIUseEmail() works > parses inline CSS 1`] = `
{
  "notes": [
    "Note about \`<body> element\` support for \`gmail.desktop-webmail\`: Partial. Replaced by a \`<div>\` with supported attributes.",
    "Note about \`<body> element\` support for \`gmail.ios\`: Partial. Replaced by a \`<div>\` with supported attributes.",
    "Note about \`<body> element\` support for \`gmail.android\`: Partial. Replaced by a \`<div>\` with supported attributes.",
    "Note about \`<body> element\` support for \`gmail.mobile-webmail\`: Partial. Replaced by a \`<div>\` with supported attributes.",
  ],
  "success": true,
  "warnings": [
    "\`<body> element\` is only partially supported by \`gmail.desktop-webmail\`",
    "\`<body> element\` is only partially supported by \`gmail.ios\`",
    "\`<body> element\` is only partially supported by \`gmail.android\`",
    "\`<body> element\` is only partially supported by \`gmail.mobile-webmail\`",
  ],
}
`;

exports[`doIUseEmail() works > should fail on unsupported <style> features 1`] = `
{
  "errors": [
    "\`filter\` is not supported by \`gmail.desktop-webmail\`",
  ],
  "notes": [
    "Note about \`<body> element\` support for \`gmail.desktop-webmail\`: Partial. Replaced by a \`<div>\` with supported attributes.",
  ],
  "success": false,
  "warnings": [
    "\`<body> element\` is only partially supported by \`gmail.desktop-webmail\`",
  ],
}
`;

exports[`doIUseEmail() works > should fail on unsupported inline-style features 1`] = `
{
  "errors": [
    "\`flex-direction:column\` is not supported by \`gmail.desktop-webmail\`",
  ],
  "notes": [
    "Note about \`<body> element\` support for \`gmail.desktop-webmail\`: Partial. Replaced by a \`<div>\` with supported attributes.",
  ],
  "success": false,
  "warnings": [
    "\`<body> element\` is only partially supported by \`gmail.desktop-webmail\`",
  ],
}
`;

exports[`doIUseEmail() works > should fail with unsupported element-attribute pairs 1`] = `
{
  "errors": [
    "\`Local anchors\` is not supported by \`gmail.ios\`",
  ],
  "notes": [
    "Note about \`<body> element\` support for \`gmail.ios\`: Partial. Replaced by a \`<div>\` with supported attributes.",
    "Note about \`Local anchors\` support for \`gmail.ios\`: Buggy. Clicking an anchor link does nothing.",
  ],
  "success": false,
  "warnings": [
    "\`<body> element\` is only partially supported by \`gmail.ios\`",
  ],
}
`;

exports[`doIUseEmail() works > should fail with unsupported element-attribute pairs 2`] = `
{
  "errors": [
    "\`display:flex\` is not supported by \`outlook.windows\`",
  ],
  "notes": [
    "Note about \`display\` support for \`outlook.windows\`: Buggy. \`display:none\` does not inherit to inner tables.",
    "Note about \`display\` support for \`outlook.windows\`: Partial. Only supports \`display:none\` (but not on \`<img>\`).",
  ],
  "success": false,
  "warnings": [
    "\`display\` is only partially supported by \`outlook.windows\`",
  ],
}
`;

exports[`doIUseEmail() works > should warn on unknown support of inline-style features or a browser 1`] = `
{
  "notes": [],
  "success": true,
  "warnings": [
    "\`table-layout\` support is not known for \`thunderbird.macos\`",
  ],
}
`;

exports[`doIUseEmail() works > should work with selectors 1`] = `
{
  "notes": [
    "Note about \`Attribute selector\` support for \`gmail.desktop-webmail\`: Partial. Only supports \`[attr~=value]\` syntax. Only \`class\` as an attribute name is known to be supported.",
    "Note about \`<body> element\` support for \`gmail.desktop-webmail\`: Partial. Replaced by a \`<div>\` with supported attributes.",
  ],
  "success": true,
  "warnings": [
    "\`Attribute selector\` is only partially supported by \`gmail.desktop-webmail\`",
    "\`<body> element\` is only partially supported by \`gmail.desktop-webmail\`",
  ],
}
`;

exports[`doIUseEmail() works > works with blank email template 1`] = `
{
  "notes": [
    "Note about \`<body> element\` support for \`gmail.desktop-webmail\`: Partial. Replaced by a \`<div>\` with supported attributes.",
    "Note about \`<body> element\` support for \`gmail.ios\`: Partial. Replaced by a \`<div>\` with supported attributes.",
    "Note about \`<body> element\` support for \`gmail.android\`: Partial. Replaced by a \`<div>\` with supported attributes.",
    "Note about \`<body> element\` support for \`gmail.mobile-webmail\`: Partial. Replaced by a \`<div>\` with supported attributes.",
  ],
  "success": true,
  "warnings": [
    "\`<body> element\` is only partially supported by \`gmail.desktop-webmail\`",
    "\`<body> element\` is only partially supported by \`gmail.ios\`",
    "\`<body> element\` is only partially supported by \`gmail.android\`",
    "\`<body> element\` is only partially supported by \`gmail.mobile-webmail\`",
  ],
}
`;

exports[`doIUseEmail() works > works with empty styles 1`] = `
{
  "notes": [],
  "success": true,
  "warnings": [],
}
`;
